# Kaitse

./: .env.example  .gitignore  README.md  icon
kaitse-api/: alembic.ini  main.py  pyproject.toml  requirements.txt
kaitse-api/alembic/: env.py
kaitse-api/alembic/versions/: 60c3c3c552bc_initial_schema.py  f4db49e67c92_initial_schema.py  fix_fbref_id_type.py
kaitse-api/app/api/: deps.py  router.py
kaitse-api/app/api/v1/: competitions.py  player_stats.py  players.py  seasons.py  teams.py
kaitse-api/app/application/: unit_of_work.py
kaitse-api/app/application/dto/: competition.py  competition_season.py  nationality.py  player.py  player_stats.py  position.py  season.py  team.py
kaitse-api/app/application/services/: competition_service.py  player_service.py  player_stats_service.py  season_service.py  team_service.py
kaitse-api/app/core/: config.py  exceptions.py  logging.py
kaitse-api/app/domain/: exceptions.py
kaitse-api/app/domain/repositories/: competition_repository.py  player_repository.py  player_stats_repository.py  season_repository.py  team_repository.py
kaitse-api/app/infrastructure/: unit_of_work.py
kaitse-api/app/infrastructure/certs/: ca-certificate.crt
kaitse-api/app/infrastructure/db/: base.py  session.py
kaitse-api/app/infrastructure/db/models/: __init__.py  associations.py  (+7 more)
kaitse-api/app/infrastructure/repositories/: sqlalchemy_competition_repository.py  sqlalchemy_player_repository.py  sqlalchemy_player_stats_repository.py  sqlalchemy_season_repository.py  sqlalchemy_team_repository.py
kaitse-api/kaitse_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kaitse-api/tests/: conftest.py
kaitse-api/tests/application/dto/: test_competition.py  test_competition_season.py  test_nationality.py  test_player.py  test_player_stats.py  test_position.py  test_season.py  test_team.py
kaitse-api/tests/core/: test_config.py  test_exceptions.py
kaitse-api/tests/infrastructure/: test_db.py
(+12 files in other folders)
